# updatehub

./: .travis.yml  Cargo.toml
src/client/: mod.rs  tests.rs
src/states/: download.rs  install.rs  mod.rs  reboot.rs
updatehub/: Cargo.toml
updatehub-cloud-sdk/src/: client.rs
updatehub-sdk/: Cargo.toml
updatehub-sdk/src/: error.rs
updatehub-sdk/src/client/: mod.rs
updatehub-sdk/tests/: openapi_integration.rs
updatehub/src/: tests.rs
updatehub/src/client/: mod.rs
updatehub/src/states/: direct_download.rs  download.rs  mod.rs  prepare_download.rs  probe.rs  start_download.rs  validation.rs
updatehub/src/states/actor/: test.rs
updatehub/tests/: common.rs  failed_integration_test.rs  integration_test.rs  successful_integration_test.rs
