# Copyright (C) 2019, 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub-sdk"
version = "0.1.0"
authors = ["asakiz <asakizin@gmail.com>"]
edition = "2018"

[dependencies]
attohttpc = { version = "0.12.0", default-features = false, features = ["tls", "json"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
ms-converter = "0.7"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs" }
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "macros"] }
